--- a/writing/v1.Rmd
+++ b/writing/v1.Rmd
@@ -8,6 +8,7 @@ header-includes:
 ---
 
 ```{r include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, cache = TRUE, warning = FALSE, message = FALSE)
 library(ggplot2); theme_set(theme_bw())
 ```
 
@@ -72,6 +73,103 @@ In 1982, M. J. Maher introduced 2 independent Poisson distributions as a way to 
 
 In 2003, Karlis and Ntzoufras proposed a diagonal inflated bivariate Poisson model in which the probabilities of draws are increased. \cite{karlis} They also created an R package to fit biavariate Poisson GLMs which we will utilize. \cite{bivpois}
 
+
+## 1.5 Data
+
+### 1.5.1 Data set
+
+The R package "engsoccerdata" provides us will all score from matches in England as well as European competition played by English teams over the past 100 years. \cite{Curley} We limit ourselves to matches occurring in seasons 1995 through 2015. The design of English Football stays consistent throughout this time range and our data set is complete for these years.
+
+### 1.5.2 Response variable
+
+We use two different type of response variables: 1. The number of home and away goals and 2. Weather the a team won, tied, or lost. The distribution of home and away goals is shown bellow.
+
+```{r}
+source("~/Documents/masters_paper/Figures/Make/goalDist.R")
+p
+```
+
+Most models modeling number of goals in a game assume he number of home and away goals in a game follow an approximately poisson distribution. We see that this approximately true. There tends more games than expected with zero goals and the variance is slightly larger than the mean number of goals.
+
+A game is a home win if the number of home goals exceeds the number of visitor goals, tied if both teams score the same number of goals, and a visitor win if the number of visitor goals exceeds the number of home goals. The distribution of outcomes is shown below. 
+
+\begin{table}[H] \centering 
+  \caption{Distribution of game outcomes} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & Outcome & Number of games & Share of games \\ 
+\hline \\[-1.8ex] 
+1 & Home win & $1,966$ & $0.458$ \\ 
+2 & Tie & $1,143$ & $0.266$ \\ 
+3 & Visitor win & $1,187$ & $0.276$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table} 
+
+We also control for the number of games a team plays per season. Better teams will last longer in in playoff competitions (FA Cup, Europa/Champions League, etc.) that happen concurrently with premier league games. These teams will play more games per season and thus on average have lower rest times.
+
+```{r}
+source("~/Documents/masters_paper/Figures/Make/gameLoad.R")
+p
+```
+
+### 1.5.3 Predictors
+While we use all games in the data set to calculate game load and rest time we limit ourselves to games in the premier league in evaluating the effect of rest on outcomes. We do this because design of the premier league in which pair of team plays each other once at home and once away allows for cleaner statistical analysis.
+
+We use this data set to calculate the number of days since the previous game. Before performing out analysis on the effect of rest time we remove games in which either of the team's previous game was over 8 days ago. If team's last non-international game was more than 8 days prior, it is possible that an international break previous happened which we have no way of controlling for. 
+
+The distribution of rest time for the home and away team is shown below. 
+
+\begin{table}[H] \centering 
+  \caption{Distribution of rest time (in days) for home and away teams} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} ccccccccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ &  &  &  &  & Visitor &  &  &  \\ 
+ &  & 2 & 3 & 4 & 5 & 6 & 7 & 8 \\ 
+\hline \\[-1.8ex] 
+ & 2 & $128$ & $9$ & $1$ & $0$ & $3$ & $0$ & $1$ \\ 
+ & 3 & $12$ & $343$ & $155$ & $22$ & $38$ & $121$ & $7$ \\ 
+ & 4 & $0$ & $165$ & $238$ & $43$ & $38$ & $91$ & $61$ \\ 
+Home & 5 & $1$ & $26$ & $50$ & $63$ & $31$ & $90$ & $31$ \\ 
+ & 6 & $3$ & $22$ & $34$ & $42$ & $110$ & $278$ & $41$ \\ 
+ & 7 & $0$ & $118$ & $74$ & $93$ & $302$ & $798$ & $110$ \\ 
+ & 8 & $1$ & $3$ & $47$ & $42$ & $32$ & $106$ & $272$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table} 
+
+We also create a binary variable for weather or not a team is "more" (7-8 days) or "less" (1-6 days) rested and find the following distribution of rest. 
+
+\begin{table}[H] \centering 
+  \caption{Distribution of rest time for home and away teams} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ &  & Away &  \\ 
+ &  & 1-6 days & 7-8 days \\ 
+\hline \\[-1.8ex] 
+Home & 1-6 days & $1,577$ & $721$ \\ 
+ & 7-8 days & $712$ & $1,286$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table} 
+
+### 1.5.4 Control variables
+
+Using Premier games we calculate a teams attacking and defensive weakness. \cite{Cronin} The attacking strength is the ratio of the average number of goals score by a team in a season to the average number of goals scored in the league that season. The defensive weakness is the ratio of the average number of goal conceded by a team in a season to the average number of goals concede in the league that season. For each team the attacking strength is computed for home and away games. The better a team the higher its attacking strength and the lower its defensive weakness strength will be. We will use the previous years attacking and defensive weakness to control for a team's ability. We exclude recently promoted teams from our analysis as we cannot use their previous season to calculate such strengths. The distribution of attacking and defensive strengths is shown below.
+
+```{r, cache=FALSE}
+source("~/Documents/masters_paper/Figures/Make/strengthDist.R")
+p
+```
+
+### 1.5.5 Further subsetting
+
 # 2 Methods
 
 ## 2.1 Poisson model
@@ -92,13 +190,37 @@ The Poisson model is most commonly used to model soccer scores. It assumes that 
 
 One of the defining features of the Poisson model is the fact that the mean of a Poisson distribution equals it's variance. As the figure below shows for most teams this equality holds. 
 
-REMAKE FIGURE
+```{r}
+source("~/Documents/masters_paper/Figures/Make/goalMeanVsVariance.R")
+p
+```
+
+
+## 2.2 Linear model for goal difference
+
+The square root of a poisson distribution can be approximated by a nornal distribution (cite). We can therefore approximate the difference in square root goals as the difference of two normal distributions, which is itself a normal distribution. This allows us to fit a normal model to the transformed goal difference. The figure below shows the distribution of normal goal difference and its approximation as a normal distribution.
+
+```{r, cache=FALSE}
+#http://tina.wiau.man.ac.uk/docs/memos/2001-010.pdf
+source("~/Documents/masters_paper/models/lmGoalDiff.R")
+p
+```
+
+Our model aims to find a linear combination of our predictors that best approximates the square root goal difference
+
+$\sqrt{G_{h,i}} - \sqrt{G_{v,i}} = X_j \beta_j$
+
+In this model we could use difference in the number of rest days as a predictor instead of number of rest days for the home team and number of rest days for the away team. Using the difference in rest as a predictor is equivalent to using the the rest days for the home team and away teams and forcing their coefficients in the model to be the opposite. We chose to not add this constraints and allow home and away rest to vary freely.
 
 # Results
 
 ## Simple Poisson GLM
 
-Table \ref{table:glm_simple} summarizes the GLM models for the number of home and away goals. Rest comes in the model either as number of days since the previous game (1) and (3) or as whether or not the team had more than 6 days of rest (2) and (4). In neither of the 4 models do we see rest as having an effect on the number of goals scored.
+Table \ref{table:glm_simple} summarizes the GLM models for the number of home and away goals. Rest comes in the model either as number of days since the previous game (1) and (3) or as whether or not the team had more than 6 days of rest (2) and (4). In neither of the 4 models do we see rest as having an effect on the number of goals scored. 
+
+The strongest effects come from the attacking strength of the home team and defensive weakness of the visitor team. This not to surprising as most models looking to predict soccer outcomes use the product of these two quantities as the expected number of goals. A team with a high attacking strength should score more since it has in the past, and a team with a high defensive weakness should take in more goals as it has in the past.
+
+We also see an effect from the game load of a team. Game load also measure the quality of a team. Better teams will qualify for more games and thus have a higher game load. We expect to see an increase in a team's game load increase its predicted number of goals and an increase in its opponent's game load decrease a team's predicted number of goal; which is what we see.
 
 \begin{table}[H] \centering 
   \caption{Generalized Linear Models with Poisson link} 
@@ -139,10 +261,54 @@ Akaike Inf. Crit. & 13,208.260 & 13,207.890 & 11,623.740 & 11,623.390 \\
 \end{tabular} 
 \end{table} 
 
+
 ## Linear model for goal difference
 
+Table \ref{table:lm_simple} summarizes the model for the square root goal difference. We find that the rest of the home and away team have no significant impact on the goal difference. Predictors highlighting the strength of the teams involved are most important.
+
+\begin{table}[H] \centering 
+  \caption{Linear model for the difference in goals scored} 
+  \label{table:lm_simple} 
+\begin{tabular}{@{\extracolsep{5pt}}lc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & \multicolumn{1}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-2} 
+\\[-1.8ex] & goal\_diff \\ 
+\hline \\[-1.8ex] 
+ h\_rest & $-$0.005 \\ 
+  & (0.010) \\ 
+  v\_rest & $-$0.003 \\ 
+  & (0.010) \\ 
+  h\_att\_str & 0.399$^{***}$ \\ 
+  & (0.057) \\ 
+  h\_def\_weak & $-$0.277$^{***}$ \\ 
+  & (0.057) \\ 
+  v\_att\_str & $-$0.380$^{***}$ \\ 
+  & (0.050) \\ 
+  v\_def\_weak & 0.364$^{***}$ \\ 
+  & (0.066) \\ 
+  h\_load & 0.019$^{***}$ \\ 
+  & (0.003) \\ 
+  v\_load & $-$0.015$^{***}$ \\ 
+  & (0.003) \\ 
+  Constant & $-$0.037 \\ 
+  & (0.246) \\ 
+ \hline \\[-1.8ex] 
+Observations & 4,296 \\ 
+R$^{2}$ & 0.138 \\ 
+Adjusted R$^{2}$ & 0.136 \\ 
+Residual Std. Error & 0.878 (df = 4287) \\ 
+F Statistic & 85.434$^{***}$ (df = 8; 4287) \\ 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
+\end{table}
 
 # Discusion
+
+## Importance of game load
 
 # Conclusion
 
