--- a/writing/v1.Rmd
+++ b/writing/v1.Rmd
@@ -228,6 +228,28 @@ $\sqrt{G_{h,i}} - \sqrt{G_{v,i}} = X_j \beta_j$
 
 In this model we could use difference in the number of rest days as a predictor instead of number of rest days for the home team and number of rest days for the away team. Using the difference in rest as a predictor is equivalent to using the the rest days for the home team and away teams and forcing their coefficients in the model to be the opposite. We chose to not add this constraints and allow home and away rest to vary freely.
 
+## 2.3 Proportional odds cummulative logit model
+
+We have 3 possible outcomes: home win, tie, or visitor win. Each outcome has a probability $\pi_i$ of happening. The probabilities of the three outcomes sum to 1 as no other outcome is possible.
+$\pi_h +\pi_t +\pi_v = 1$
+
+The probability that home loses is $1-\pi_h-\pi_t=\pi_v$ and it's log odds are $L_v=\log{ \big( \frac{\pi_v}{\pi_h+\pi_t} \big)}$
+
+The probability that home loses or ties is $1-\pi_h=\pi_v + \pi_t$ and it's log odds are $L_t=\log{ \big( \frac{\pi_v + \pi_t}{\pi_h} \big)}$
+
+The log odds of these two events are assumed to be a linear combination of the predictors; $L_v = \alpha_v + X\beta_v$ and $L_t = \alpha_t + X\beta_t$. 
+
+In the proportional odds model we require the coefficients $\beta_v$ and $\beta_t$ to be the same; $L_v = \alpha_v + X\beta$ and $L_t = \alpha_t + X\beta$.
+
+The underlying assumption is that there is an unobserved variable which determines match outcomes. Here this variable is the ability of a home team to win against a given openent. The predictors X change our belief as to how this ability is distributed. 
+
+```{r}
+source("~/Documents/masters_paper/Figures/Make/orderedEx.R")
+p
+```
+
+$\alpha_v$ can be though of as the threshold in ability to go from a tie or home win to a visitor win and $\alpha_t$ as the threshold to go from a home win to a tie or visitor win or tie. Depending on the distribution of underlying ability, the probability of each outcome changes. In the figure above if the feature is matched, the probability of a win is 78\% but if the feature is not matched the probability of a win is 42\%.
+
 # Results
 
 ## Simple Poisson GLM
@@ -321,6 +343,48 @@ F Statistic & 85.434$^{***}$ (df = 8; 4287) \\
 \textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
 \end{tabular} 
 \end{table}
+
+## Proportional odds cummulative logit model
+
+The odds of moving from a visitor win to a tie or a tie to a home win increase when the home team's attacking strength, home team's game load, or visitor's team team defensive weakness increases. The opposite happens when the team's are reversed. The directionality of these findings agrees with the other models. The proportional odds cummulative logit model does not find any effect of rest, whether measured in days or as a binary variable. 
+\begin{table}[H] \centering 
+  \caption{Ordered logistic model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}}lcc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & \multicolumn{2}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-3} 
+\\[-1.8ex] & \multicolumn{2}{c}{outcome} \\ 
+\\[-1.8ex] & (1) & (2)\\ 
+\hline \\[-1.8ex] 
+ Team\_rest & $-$0.016 &  \\ 
+  & (0.022) &  \\ 
+  Opp\_rest & 0.006 &  \\ 
+  & (0.022) &  \\ 
+  Team\_rest\_bin &  & $-$0.002 \\ 
+  &  & (0.074) \\ 
+  Opp\_rest\_bin &  & $-$0.039 \\ 
+  &  & (0.074) \\ 
+  Team\_att\_str & 0.864$^{***}$ & 0.870$^{***}$ \\ 
+  & (0.130) & (0.130) \\ 
+  Opp\_def\_weak & 0.700$^{***}$ & 0.707$^{***}$ \\ 
+  & (0.145) & (0.145) \\ 
+  Opp\_att\_str & $-$0.717$^{***}$ & $-$0.722$^{***}$ \\ 
+  & (0.111) & (0.111) \\ 
+  Team\_def\_weak & $-$0.490$^{***}$ & $-$0.490$^{***}$ \\ 
+  & (0.125) & (0.125) \\ 
+  Team\_load & 0.042$^{***}$ & 0.043$^{***}$ \\ 
+  & (0.008) & (0.008) \\ 
+  Opp\_load & $-$0.034$^{***}$ & $-$0.035$^{***}$ \\ 
+  & (0.008) & (0.008) \\ 
+ \hline \\[-1.8ex] 
+Observations & 4,296 & 4,296 \\ 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{2}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
+\end{table} 
 
 # Discusion
 
